# QArc

./: .env  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
backend/: .env  .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  dependencies.py  main.py
backend/app/adapters/: __init__.py  frameworks.py
backend/app/agents/: __init__.py  automation_engineer.py  base.py  bug_detective.py  coverage_analyst.py  quality_advocate.py  story_analyzer.py  test_case_writer.py  test_critic.py  test_executor.py  test_strategist.py
backend/app/api/: agents.py  artifacts.py  bugs.py  dashboard.py  executions.py  files.py  jira_routes.py  pipeline.py  reports.py  router.py  scheduler_routes.py  settings_routes.py  stories.py  webhooks.py  ws.py
backend/app/core/: __init__.py  events.py  middleware.py
backend/app/db/: __init__.py  engine.py  tables.py
backend/app/evidence/: __init__.py  collector.py  storage.py
backend/app/files/: __init__.py  manager.py
backend/app/integrations/: __init__.py
backend/app/memory/: __init__.py
backend/app/models/: __init__.py  agents.py  artifacts.py  bugs.py  dashboard.py  executions.py  pipeline.py  reports.py  scheduler.py  settings.py  stories.py  test_cases.py  webhooks.py
backend/app/orchestrator/: __init__.py  debate.py  pipeline.py  state.py  summarizer.py
backend/app/parsers/: __init__.py  console_parser.py  coverage_parser.py  junit_parser.py
backend/data/: qa_nexus.db  reflection_memory.db
src/: App.tsx  (+1 more)
(+75 files in other folders)
